# opn2-rs

./: Cargo.toml  README.md
dirty-guard/: Cargo.toml
dirty-guard/src/: lib.rs
libnuked-opn2-sys/: .gitmodules  Cargo.toml  build.rs
libnuked-opn2-sys/src/: lib.rs
opn2/: Cargo.toml
opn2-cpal/: Cargo.toml
opn2-cpal/src/: lib.rs
opn2-driver/: Cargo.toml
opn2-driver/src/: lib.rs
opn2-nuked/: Cargo.toml
opn2-nuked/src/: lib.rs
opn2-rs/: Cargo.toml  LICENSE_ORIGINAL
opn2-rs/src/: lib.rs  rom.rs
opn2-rs/src/chips/: mod.rs  ym2612.rs  ym3438.rs
opn2-rs/src/opn2/: address.rs  adsr.rs  channel.rs  envelope_generator.rs  fm.rs  io.rs  lfo.rs  mod.rs  phase_generator.rs  registers.rs  timer_a.rs  timer_b.rs
opn2-rs/src/opn2/traits/: chip.rs  dac.rs  mod.rs  read_mode.rs  (+1 more)
opn2-test/: Cargo.toml
opn2-test/src/: integration_tests.rs  main.rs
opn2-tracker/: Cargo.toml
opn2-tracker/src/: main.rs  opn2_track.rs
opn2-tracker/src/opn2_state/: global_state.rs  mod.rs  operator_state.rs
opn2-trait/: Cargo.toml
opn2-trait/src/: lib.rs
opn2/src/: command.rs  instruction.rs  lib.rs  wait_samples.rs
opn2/src/registers/: mod.rs
vgm/: Cargo.toml
vgm/data/: attack_sharply.vgm  evil_destroyer.vgm  laughter.vgm  lightning_strikes_again.vgm  metal_squad.vgm  ooze.vgm  phantom.vgm  rancor.vgm  recalcitrance.vgm  simmer_down.vgm  stranger.vgm  strike_out.vgm  the_breaker.vgm  transparent_obstacle.vgm  war_like_requiem.vgm
vgm/src/: gd3.rs  header.rs  lib.rs  opn2_conversion.rs  parsing.rs  vgm_file.rs
vgm/src/commands/: command.rs  mod.rs
(+43 files in other folders)
